# crowdstrike-mirror

./: README.md  requirements.txt  setup.cfg
crowdstrike_mirror/: falconsensor.py
